<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/main_padding"
    android:orientation="horizontal" >
    
    <LinearLayout
        android:background="@color/background"
        android:orientation="vertical" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginBottom="@dimen/main_title_margin_bottom"
	        android:text="@string/main_title" 
	        android:textSize="@dimen/main_title_size" />
	    
	    <Button
	        android:id="@+id/continue_btn" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/continue_label" />
	    
	    <Button
	        android:id="@+id/new_game_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/new_game_label" />
	    
	    <Button
	        android:id="@+id/about_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_label" />
	    
	    <Button
	        android:id="@+id/exit_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/exit_label" />
    
    </LinearLayout>

</LinearLayout>
